# ASHes

./: CMakeLists.txt  README.md
Include/: CMakeLists.txt
Include/ashes/: Ashes.hpp  Engine.hpp  Engine.inl  EnumType.hpp  EnumType.inl  Function.hpp  Function.inl  IRefType.hpp  ObjectType.hpp  ObjectType.inl  TypeStore.hpp  TypeStore.inl
Test/: CMakeLists.txt  engine.cpp
Test/Catch/: CMakeLists.txt
