CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(ASHes)

OPTION(BUILD_TEST "Build the test cases" OFF)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake)
ADD_SUBDIRECTORY(Include)
INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/Include
)

IF (BUILD_TEST)
	ADD_SUBDIRECTORY(Test/Catch)
	INCLUDE_DIRECTORIES(
		${CATCH_INCLUDE_DIR}
	)

	ENABLE_TESTING()

	ADD_SUBDIRECTORY(Test)

	ADD_TEST(NAME ASH_Testsuite
	         COMMAND TestSuite
	         WORKING_DIRECTORY ${PROJECT_BINARY_DIR}/Test)
ENDIF()